// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Mac Intel 1`] = `
{
  "mac": [
    {
      "arch": "x64",
      "file": "Test App ßW-1.0.0-mac.zip",
      "safeArtifactName": "TestApp-1.0.0-mac.zip",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test App ßW-1.0.0-mac.zip.blockmap",
      "safeArtifactName": "Test App ßW-1.0.0-mac.zip.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "latest-mac.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "size": "@size",
            "url": "Test App ßW-1.0.0-mac.zip",
          },
        ],
        "path": "Test App ßW-1.0.0-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.0.0",
      },
    },
  ],
}
`;

exports[`Mac Intel 2`] = `
{
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.0.0",
  "ElectronAsarIntegrity": {
    "Resources/app.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
  },
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": {
      "127.0.0.1": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrefersDisplaySafeAreaCompatibilityMode": false,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`Mac Intel 3`] = `
{
  "mac": [
    {
      "arch": "x64",
      "file": "Test App ßW-1.0.1-mac.zip",
      "safeArtifactName": "TestApp-1.0.1-mac.zip",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test App ßW-1.0.1-mac.zip.blockmap",
      "safeArtifactName": "Test App ßW-1.0.1-mac.zip.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "latest-mac.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "size": "@size",
            "url": "Test App ßW-1.0.1-mac.zip",
          },
        ],
        "path": "Test App ßW-1.0.1-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.0.1",
      },
    },
  ],
}
`;

exports[`Mac Intel 4`] = `
{
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.0.1",
  "ElectronAsarIntegrity": {
    "Resources/app.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
  },
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": {
      "127.0.0.1": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrefersDisplaySafeAreaCompatibilityMode": false,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`Mac Intel 5`] = `
{
  "files": [
    {
      "sha512": "@sha512",
      "size": "@size",
    },
  ],
  "path": "Test App ßW-1.0.1-mac.zip",
  "releaseDate": "@releaseDate",
  "sha512": "@sha512",
  "version": "1.0.1",
}
`;

exports[`Mac Intel 6`] = `
[
  "Test App ßW-1.0.1-mac.zip",
]
`;

exports[`Mac arm64 1`] = `
{
  "mac": [
    {
      "arch": "arm64",
      "file": "Test App ßW-1.0.0-arm64-mac.zip",
      "safeArtifactName": "TestApp-1.0.0-arm64-mac.zip",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test App ßW-1.0.0-arm64-mac.zip.blockmap",
      "safeArtifactName": "Test App ßW-1.0.0-arm64-mac.zip.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "latest-mac.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "size": "@size",
            "url": "Test App ßW-1.0.0-arm64-mac.zip",
          },
        ],
        "path": "Test App ßW-1.0.0-arm64-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.0.0",
      },
    },
  ],
}
`;

exports[`Mac arm64 2`] = `
{
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.0.0",
  "ElectronAsarIntegrity": {
    "Resources/app.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
  },
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": {
      "127.0.0.1": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrefersDisplaySafeAreaCompatibilityMode": false,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`Mac arm64 3`] = `
{
  "mac": [
    {
      "arch": "arm64",
      "file": "Test App ßW-1.0.1-arm64-mac.zip",
      "safeArtifactName": "TestApp-1.0.1-arm64-mac.zip",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test App ßW-1.0.1-arm64-mac.zip.blockmap",
      "safeArtifactName": "Test App ßW-1.0.1-arm64-mac.zip.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "latest-mac.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "size": "@size",
            "url": "Test App ßW-1.0.1-arm64-mac.zip",
          },
        ],
        "path": "Test App ßW-1.0.1-arm64-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.0.1",
      },
    },
  ],
}
`;

exports[`Mac arm64 4`] = `
{
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.0.1",
  "ElectronAsarIntegrity": {
    "Resources/app.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
  },
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": {
      "127.0.0.1": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrefersDisplaySafeAreaCompatibilityMode": false,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`Mac arm64 5`] = `
{
  "files": [
    {
      "sha512": "@sha512",
      "size": "@size",
    },
  ],
  "path": "Test App ßW-1.0.1-arm64-mac.zip",
  "releaseDate": "@releaseDate",
  "sha512": "@sha512",
  "version": "1.0.1",
}
`;

exports[`Mac arm64 6`] = `
[
  "Test App ßW-1.0.1-arm64-mac.zip",
]
`;

exports[`Mac universal 1`] = `
{
  "mac": [
    {
      "arch": "universal",
      "file": "Test App ßW-1.0.0-universal-mac.zip",
      "safeArtifactName": "TestApp-1.0.0-universal-mac.zip",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test App ßW-1.0.0-universal-mac.zip.blockmap",
      "safeArtifactName": "Test App ßW-1.0.0-universal-mac.zip.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "latest-mac.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "size": "@size",
            "url": "Test App ßW-1.0.0-universal-mac.zip",
          },
        ],
        "path": "Test App ßW-1.0.0-universal-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.0.0",
      },
    },
  ],
}
`;

exports[`Mac universal 2`] = `
{
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.0.0",
  "ElectronAsarIntegrity": {
    "Resources/app.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
  },
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": {
      "127.0.0.1": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrefersDisplaySafeAreaCompatibilityMode": false,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`Mac universal 3`] = `
{
  "mac": [
    {
      "arch": "universal",
      "file": "Test App ßW-1.0.1-universal-mac.zip",
      "safeArtifactName": "TestApp-1.0.1-universal-mac.zip",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test App ßW-1.0.1-universal-mac.zip.blockmap",
      "safeArtifactName": "Test App ßW-1.0.1-universal-mac.zip.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "latest-mac.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "size": "@size",
            "url": "Test App ßW-1.0.1-universal-mac.zip",
          },
        ],
        "path": "Test App ßW-1.0.1-universal-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.0.1",
      },
    },
  ],
}
`;

exports[`Mac universal 4`] = `
{
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.0.1",
  "ElectronAsarIntegrity": {
    "Resources/app.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
  },
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": {
      "127.0.0.1": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrefersDisplaySafeAreaCompatibilityMode": false,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`Mac universal 5`] = `
{
  "files": [
    {
      "sha512": "@sha512",
      "size": "@size",
    },
  ],
  "path": "Test App ßW-1.0.1-universal-mac.zip",
  "releaseDate": "@releaseDate",
  "sha512": "@sha512",
  "version": "1.0.1",
}
`;

exports[`Mac universal 6`] = `
[
  "Test App ßW-1.0.1-universal-mac.zip",
]
`;
